# minesoc-seedfinding

./: .gitignore  README.md  data.py  generate-image  generate-image.c  main.ipynb  pyproject.toml
